...
                                                children: [
                                                  Text(
                                                    _specificTime != null
                                                        ? _specificTime!.format(
                                                            context,
                                                          )
                                                        : 'Set Time',
                                                    style: TextStyle(
                                                      color:
                                                          AppTheme.textMainDark,
                                                      fontWeight:
                                                          FontWeight.w500,
                                                    ),
...
